SAK-18477
git-svn-id: https://source.sakaiproject.org/svn/presence/trunk@77338 66ffb92e-73f9-0310-93c1-f5514f145a0a